# 3d-fractals

./: CMakeLists.txt
3rd/: CMakeLists.txt
shaders/: CMakeLists.txt  simple.frag  simple.vert
src/: CMakeLists.txt  Color.cpp  Color.hpp  Header.cpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Sierpinski.cpp  Sierpinski.hpp  Transform.hpp
